# pidgeon

./: Cargo.toml  README.md  flake.nix  protocol.md  rust-toolchain.toml
lua/: client.lua  commands.lua
lua/pidgeon/: client.lua  init.lua  treesitter.lua
plugin/: pidgeon.lua
src/: crow.rs  error.rs  main.rs  repl.rs  server.rs
