[package]
name = "pidgeon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
clap = { version = "4.5.49", features = ["derive"] }
futures = "0.3.31"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
